<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onResetButtonClick"
            android:text="@string/reset_game" />

        <RelativeLayout
            android:id="@+id/game_over_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingBottom="50dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sadsf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/congratulations"
                    android:textColor="@color/black"
                    android:textSize="60sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/game_over_msg"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>

        </RelativeLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/btn_1"
                    android:layout_width="127dp"
                    android:layout_height="130dp"
                    android:layout_margin="10dp"
                    android:onClick="onButtonClick"
                    android:text="@string/btn_1_text"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/color_btn_1" />

                <Button
                    android:id="@+id/btn_2"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_margin="10dp"
                    android:onClick="onButtonClick"
                    android:text="@string/btn_2_text"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/color_btn_2" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/btn_3"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_margin="10dp"
                    android:onClick="onButtonClick"
                    android:text="@string/btn_3_text"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/color_btn_3" />

                <Button
                    android:id="@+id/btn_4"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_margin="10dp"
                    android:onClick="onButtonClick"
                    android:text="@string/btn_4_text"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/color_btn_4" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/btn_5"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_margin="10dp"
                    android:onClick="onButtonClick"
                    android:text="@string/btn_5_text"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/color_btn_5" />

                <Button
                    android:id="@+id/btn_6"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_margin="10dp"
                    android:onClick="onButtonClick"
                    android:text="@string/btn_6_text"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/color_btn_6" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/progresso"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="center"
                android:text="@string/progress"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:fadingEdge="horizontal"
                android:indeterminate="false"
                android:max="6"
                android:minHeight="100dp"
                android:scaleY="4.0" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>